@@ -1,3 +1,5 @@
+watch out! valcyrix shoots now
+--------------------------------
 fixed pause (thanks to Ingolf)
 added shoot attack
 added buildtime info
